added email verification server side logic

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://shehroz:timeline1@cluster0.8kq4goq.mongodb.net/
 TOKEN_SECRET=nextjsproject
 DOMAIN=http://localhost:3000 
+USER= 5ffb4eedd6f625
+PASS= 57ede6f9101be3
